# imagenet-classifier-api

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
api/: app.py  classifier.py  datamodels.py  image_processing.py
api/auth/: auth_service.py
api/db/: database.py  datamodels.py  router.py
tests/: test_auth.py  test_classifier.py  test_database.py  test_image_processing.py
tests/test_files/: test_base64.txt
