[tool.poetry]
name = "imagenet-classifier-api"
version = "0.1.0"
description = ""
authors = ["Dmitry Kuznetsov <DKuznetsov2000@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
onnx = "^1.15.0"
opencv-python = "^4.8.1.78"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
