[tool.poetry]
name = "imagenet-classifier-api"
version = "0.1.0"
description = ""
authors = ["Dmitry Kuznetsov <DKuznetsov2000@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
onnx = "^1.15.0"
opencv-python = "^4.8.1.78"
onnxruntime = "^1.16.1"
pytest-asyncio = "^0.23.3"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pymongo = "^4.6.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
